@@ -1,0 +1,12 @@
+<html>
+<head>
+</head>
+<body>
+<p>Convex hull computation.</p> 
+
+<p>Contains various algorithms for computing convex hull of a set of points,
+like Jarvis March.</p>
+
+
+</body>
+</html>
